syntax = "proto3";

package gameoflife;

// Definição da mensagem para uma célula individual
message Cell {
    bool alive = 1;
}

// Definição da mensagem para a matriz (board)
message Board {
    repeated Cell row = 1;
}

// Definição da mensagem para uma lista de linhas, formando a matriz completa
message BoardRequest {
    repeated Board rows = 1;
}

message BoardResponse {
    repeated Board rows = 1;
}

// Definição do serviço
service GameOfLife {
    rpc UpdateBoard (BoardRequest) returns (BoardResponse);
}
